<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutDetail">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAvatarUserDetail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/twNameUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:text="@string/name"
        android:layout_toEndOf="@+id/imageViewAvatarUserDetail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutEmailUserDetail">

            <TextView
                android:id="@+id/labelEmailUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/twEmailUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutCompanyUserDetail">
            <TextView
                android:id="@+id/labelCompanyUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/company"/>

            <TextView
                android:id="@+id/twCompanyUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutFollowersUserDetail">

            <TextView
                android:id="@+id/labelFollowersUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/followers"/>

            <TextView
                android:id="@+id/twFollowersUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutFollowingUserDetail">
            <TextView
                android:id="@+id/labelFollowingUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/following"/>

            <TextView
                android:id="@+id/twFollowingUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutDateCreatedUserDetail">

            <TextView
                android:id="@+id/labelDateCreatedUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"
                android:text="@string/date_created"/>

            <TextView
                android:id="@+id/twDateCreatedUserDetail"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>